<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/menu_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:context=".TarefaAtualizarActivity"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_tarefa_atualizar_nome"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:hint="@string/tarefa_atualizar_nome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_tarefa_atualizar_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords|textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_layout_tarefa_atualizar_data"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/tarefa_atualizar_data">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_tarefa_atualizar_data"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_layout_tarefa_atualizar_hora"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/tarefa_atualizar_hora">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_tarefa_atualizar_hora"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/back_spinner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Categoria:"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/mtrl_indicator_text_color"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:id="@+id/sp_atualizar_categorias"
                    android:entries="@array/categorias"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:backgroundTint="@color/colorPrimary"/>

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbx_atualizar_realizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarefa Realizada?"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_tarefa_atualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Atualizar"/>

                <ImageButton
                    android:id="@+id/btn_tarefa_excluir"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/img_delete"
                    android:scaleType="fitCenter"
                    android:backgroundTint="#FF0000"/>

                <ImageButton
                    android:id="@+id/btn_tarefa_compartilhar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/img_share"
                    android:scaleType="fitCenter"
                    android:backgroundTint="#0004FF"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.drawerlayout.widget.DrawerLayout>